--- a/templates/page.html
+++ b/templates/page.html
@@ -41,9 +41,9 @@
 				<div class="col-lg-1 p-0"></div> <!-- Empty space to the left on large+ viewports -->
 				{{ if .Is404 }}
 				<div class="col-lg">
-					<h3 class="text-center">Page Not Found (404)</h3>
+					<h3 class="text-center">Perhaps the archives are incomplete.</h3>
 					<p class="text-center text-muted">
-						The page you requested does not exist.
+						The page you requested does not exist. (404)
 					</p>
 				</div>
 				{{ else }}
