SCSS additions and changes 1/N

--- a/static/main.scss
+++ b/static/main.scss
@@ -5,6 +5,7 @@
 @import 'sidebar';
 @import 'forms';
 @import 'lists';
+@import 'tables';
 
 .d-flex {
     display: flex;
@@ -21,4 +22,8 @@ pre {
     border-radius: 3px;
     color: $orange;
     display: block
+}
+
+pre code {
+    border: none;
 }
