--- a/assets/templates/page.html
+++ b/assets/templates/page.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ .Title }}</title>
-	<link href="/static/bootstrap.min.css" rel="stylesheet">
-	<link href="/static/stylesheet.css" rel="stylesheet">
+	<link href="/assets/bootstrap.min.css" rel="stylesheet">
+	<link href="/assets/stylesheet.css" rel="stylesheet">
 </head>
 <body onload="postProcessHTML()">
 	<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
@@ -128,8 +128,8 @@
 	</div>
 	<!-- FOOTER END -->
 	<!-- SCRIPT REFS BEGIN -->
-	<script src="/static/frontendProcessing.js"></script>
-	<script src="/static/bootstrap.bundle.min.js"></script>
+	<script src="/assets/frontendProcessing.js"></script>
+	<script src="/assets/bootstrap.bundle.min.js"></script>
 	<!-- SCRIPT REFS END -->
 </body>
 </html>
