--- a/assets/templates/page-v2.html
+++ b/assets/templates/page-v2.html
@@ -16,7 +16,7 @@
     <div class="inner">
         <header>
             <a href="/"><img src="/assets/icons/lionfish.png" width="128" height="128" alt="lionfish" /></a>
-            <span id="tagline">my-document-archive</span>
+            <span id="tagline">--my-document-archive</span>
             <form id="search" action="/search/results">
                 <input id="search-text" name="search" placeholder="Search..." autocomplete="off" type="text" />
             </form>
@@ -76,7 +76,7 @@
     <div class="inner">
         <footer>
           <div class="site-source">
-            Patches, suggestions, and comments are welcome.
+            <p>{{ .FooterText }}</p>
           </div>
         </footer>
         <a href="#top" class="no-js scrollToTop" id="scrollToTop" data-label="Scroll to top">
