--- a/assets/templates/page-v2.html
+++ b/assets/templates/page-v2.html
@@ -65,7 +65,7 @@
     <div id="content">
     <div id="main">
 
-    {{ template "articleContent" . }}
+    {{ template "content" . }}
 
     </div> <!-- #main -->
     </div> <!-- #content -->
