--- a/assets/templates/articles.html
+++ b/assets/templates/articles.html
@@ -1,4 +1,14 @@
 <h1>{{ if eq (len .HighlightedTags) 1 }}Articles tagged <a href="/tags/{{ index .HighlightedTags 0 }}">{{ index .HighlightedTags 0 }}</a>{{ else }}Articles{{ end }}</h1>
+{{ if gt (len .Articles) 0 }}
 {{ range .Articles }}
-<h4><a href="/articles/{{ .Key }}">{{ .Title }}</a></h4>
+<h3><a href="/articles/{{ .Key }}">{{ .Title }}</a></h3>
+<p><i>Last updated on {{ .ModifiedDate }}</i></p>
+{{ end }}
+{{ else }}
+{{ range .ArticleGroups }}
+<h2>{{ .GroupTitle }}</h2>
+{{ range .Articles }}
+<h3><a href="/articles/{{ .Key }}">{{ .Title }}</a></h3>
+{{ end }}
+{{ end }}
 {{ end }}
