--- a/assets/templates/404.html
+++ b/assets/templates/404.html
@@ -1,2 +1,3 @@
 <h1>Perhaps the archives are incomplete?</h1>
-<h3>The page you requested does not exist. (404)</h3>
+<h2>The page you requested does not exist. (404)</h2>
+<img src="/assets/icons/octopus.png" width="316" height="250" alt="octopus" />
