Add sidebar button and sort articles per tag

--- a/assets/templates/page-v2.html
+++ b/assets/templates/page-v2.html
@@ -25,6 +25,7 @@
     <div class="inner">
     <div id="content-wrapper">
 
+    <button class="sidebar-btn"></button>
     <aside class="sidebar" id="sidebar">
     <nav>
         <ul>
