Add missing icons

--- a/assets/stylesheets/sidebar.scss
+++ b/assets/stylesheets/sidebar.scss
@@ -41,7 +41,7 @@ aside.sidebar.active {
 // Breakpoint ----------------
 @media (max-width: $default) {
   .sidebar-btn {
-    @include background-image-2x("/images/icons/sidebar", 24px, 24px, left center);
+    @include background-image-2x("/assets/icons/sidebar", 24px, 24px, left center);
     @include border-top-right-radius(5px);
     @include border-bottom-right-radius(5px);
     background-color: $black-3 !important;
