--- a/assets/templates/page-v2.html
+++ b/assets/templates/page-v2.html
@@ -14,7 +14,7 @@
     <div class="inner">
         <header>
             <a href="/"><img src="/assets/icons/lionfish.png" width="128" height="128" alt="lionfish" /></a>
-            <span id="tagline">The universe is change. Life is opinion.</span>
+            <span id="tagline"><b>The L-Archive</b><br>www.acicovic.me</span>
             <form id="search" action="/search">
                 <input id="search-text" name="what" placeholder="Search..." autocomplete="off" type="text" />
             </form>
