Private tag is now the default

--- a/assets/templates/about.html
+++ b/assets/templates/about.html
@@ -5,7 +5,7 @@
     This website hosts all of my writings and notes, or <em>articles</em> as called here, which I decided to share
     publicly. Part of it are summarizations of various books or their chapters, usually of technical nature. There are
     some guides and references which I made to make life and work easier. Some of the notes are just simple lists, even
-    personal e.g. my book library. There is no unifying theme - this work is mostly a product of my affinity with
+    personal e.g. my book library. There is no unifying theme - this work is mostly a product of my affinity with
     reading and writing down text with the goal of presenting concepts, condensing information and explaining core
     principles in a simpler way for some future time when knowledge might be needed. There is also joy to be found in
     writing itself, therefore I don’t expect all of the articles to be of technical or practical nature.
@@ -33,8 +33,9 @@
 
 <h2>Known Issues</h2>
 <ol>
-    <li>The search function is not implemented yet. The search box is there, but it doesn’t do anything at the moment (except making the website look prettier).</li>
-    <li>Auto-hidden side menu on small viewports has functionality issues in desktop computer browsers, although it doesn’t experience any issues on mobile device browsers.</li>
+    <li>The search function is not implemented yet. The search box is there, but it doesn’t do anything at the moment.</li>
+    <li>Auto-hidden side menu on small viewports has functionality issues in desktop computer browsers,
+        although it doesn’t experience any issues in mobile device browsers.</li>
 </ol>
 <p><em>Bug reports and suggestions are welcome at <a href="mailto:cicovic.andrija.alt@gmail.com">cicovic.andrija.alt@gmail.com</a>.</em></p>
 
