Update about and home templates

--- a/assets/templates/home.html
+++ b/assets/templates/home.html
@@ -1,1 +1,11 @@
-<h1>Welcome!</h1>
+<h1>Home page</h1>
+
+<h2>News</h2>
+
+<h3>The website is live!</h3>
+
+Official launch date: November 28th 2023.
+
+<h2>Blog</h2>
+
+<em>No posts yet.</em>
