--- a/assets/templates/about.html
+++ b/assets/templates/about.html
@@ -2,25 +2,21 @@
 
 <h2>Purpose</h2>
 <p>
-    This website hosts all of my writings and notes, or <em>articles</em> as called here, which I decided to share
-    publicly. Part of it are summarizations of various books or their chapters, usually of technical nature. There are
-    some guides and references which I made to make life and work easier. Some of the notes are just simple lists, even
-    personal e.g. my book library. There is no unifying theme - this work is mostly a product of my affinity with
-    reading and writing down text with the goal of presenting concepts, condensing information and explaining core
-    principles in a simpler way for some future time when knowledge might be needed. There is also joy to be found in
-    writing itself, therefore I don’t expect all of the articles to be of technical or practical nature.
+    This is a personal website where I publish all of my writings.
+    These are references, research notes, summarizations of book chapters, blogs, lists...all collectively called
+    <em>articles</em> here. I chose a general term to detach myself from commitment to any common structure.
+    The work is mostly a product of my affinity with reading and writing down text with the goal of presenting concepts,
+    condensing information and explaining core principles in a simpler way for some future time when knowledge might be
+    needed. There is also joy to be found in writing itself.
 </p>
-
-<h2>Articles &amp; Tags</h2>
 <p>
-    The main item served by the website is an <em>article</em>. I chose a general term to detach myself from commitment
-    to any common structure. Articles are not all dedicated to a single topic, and are mostly independent; in fact, I
-    expect that very few articles will be interlinked. There is a mechanism for grouping articles by topic: <em>tags</em>,
-    which is a general name for keywords, themes or areas to which articles are dedicated. Each article has at least one
-    tag assigned. This allows for categorization, which is only a more free form of inter-linking. The concepts of
-    <em>articles</em> and <em>tags</em> are deeply baked in the design of the website, to the point that even the standard
-     supporting pages like <em>Home</em> and <em>About</em> are internally stored as articles with the <em>meta</em> tag
-     assigned to them.
+    Articles are not all dedicated to a single discipline or subject, and are mostly independent; in fact, I expect that
+    few articles will be interlinked. There is a mechanism for grouping articles by topic: <em>tags</em>, which
+    represent keywords, themes or subjects to which articles are dedicated. Each article has at least one tag assigned.
+    This allows for categorization, which is only a more free form of interlinking.
+</p>
+<p>
+    The name is a reference to the Discworld's L-space.
 </p>
 
 <h2>Languages</h2>
@@ -28,24 +24,33 @@
     This is a bilingual website, but not in the way in which all articles are written in two languages, but in a way
     where most articles are written in English and a minority is written in Serbian. If the context was more fitting for
     an article in Serbian, I wrote it in Serbian. Also, in cases where the article is a product of digitalization of
-    written notes, I kept the original language, which is mostly Serbian. Articles written in Serbian are tagged with the
-    <em>sr-lang</em> tag.</p>
+    written notes, I kept the original language, which is mostly Serbian. Articles written in Serbian are tagged with
+    the <em>sr-lang</em> tag.
+</p>
 
 <h2>Known Issues</h2>
 <ol>
-    <li>The search function is not implemented yet. The search box is there, but it doesn’t do anything at the moment.</li>
-    <li>Auto-hidden side menu on small viewports has functionality issues in desktop computer browsers,
-        although it doesn’t experience any issues in mobile device browsers.</li>
+    <li>
+        The search function is not implemented yet. The search box is there, but it doesn’t do anything at the moment.
+    </li>
+    <li>
+        Auto-hidden side menu on small viewports has functionality issues in desktop computer browsers,
+        although it doesn’t experience any issues in mobile device browsers.
+    </li>
 </ol>
-<p><em>Bug reports and suggestions are welcome at <a href="mailto:cicovic.andrija.alt@gmail.com">cicovic.andrija.alt@gmail.com</a>.</em></p>
+<p>
+    <em>Bug reports and suggestions are welcome at
+        <a href="mailto:cicovic.andrija.alt@gmail.com">cicovic.andrija.alt@gmail.com</a>.
+    </em>
+</p>
 
 <h2>Acknowledgments</h2>
 <p>
-    I have the team behind <a href="https://git-scm.com">git-scm.com</a> website to thank for designing the look and
-    open-sourcing the site on <a href="https://github.com/git/git-scm.com">GitHub</a>. The source code is licensed under
+    I have the <a href="https://git-scm.com">git-scm.com</a> website team to thank for open-sourcing the site on
+    <a href="https://github.com/git/git-scm.com">GitHub</a>. The source code is licensed under
     the <a href="https://opensource.org/license/mit/">MIT license</a> and a much condensed and modified version of the
     site’s stylesheet is used for the look of this website. The modified CSS code can be downloaded from
-    <a href="https://notes.acicovic.me/assets/styles.css">https://notes.acicovic.me/assets/styles.css</a>.
+    <a href="/assets/styles.css">here</a>.
 </p>
 
 <h2>Author</h2>
@@ -56,7 +61,7 @@
     💻 Programmer, writing software for the last 8 years (<a href="https://github.com/cicovic-andrija">GitHub</a>),
     with 5 years of professional experience in the software engineering field
     (<a href="https://www.linkedin.com/in/cicovic-andrija/">LinkedIn</a>).<br>
-    🎓 Engineer with BSc and MSc academic degrees in Electrical and Computer Engineering from University of Belgrade.<br>
+    🎓 Engineer with BSc and MSc academic degrees in Electrical and Computer Engineering.<br>
     🤿 Passionate SCUBA diver since 2022.<br>
     📕 Bibliophile.
 </p>
