--- a/assets/stylesheets/layout.scss
+++ b/assets/stylesheets/layout.scss
@@ -8,7 +8,7 @@ body {
   font-size: $base-font-size;
   line-height: $base-line-height;
   color: $font-color;
-  background: #f0efe7 url("/images/bg/body.jpg");
+  background: #f0efe7;
 }
 
 // windows chrome makes a mess of Adelle web font
