Added a look and feel page

--- a/assets/templates/search.html
+++ b/assets/templates/search.html
@@ -1,3 +1,2 @@
 <h1>Sorry, not implemented yet.</h1>
-<h3>However, here's a picture of an octopus:</h3>
-<img src="/assets/icons/octopus.png" width="316" height="250" alt="octopus" />
+<img src="/assets/icons/creature.png" width="320" height="220" alt="octopus" />
